hw06 - rewrote javadocs in English, domain entities refactoring, got rid of Lombok