@@ -9,7 +9,6 @@ import ru.otus.erinary.hw06.hibernatelibrary.model.Comment;
 
 import java.time.ZonedDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -43,7 +42,7 @@ class CommentRepositoryImplTest {
     void testFindById() {
         var comment = repository.findById(1L).orElseThrow();
         assertEquals("comment text 1", comment.getText());
-        assertEquals("user1", comment.getUser());
+        assertEquals("user1", comment.getUsername());
         assertEquals(ZonedDateTime.parse("2019-06-16T10:15:30+03:00[Europe/Moscow]").toInstant(), comment.getDate().toInstant());
         assertNotNull(comment.getBook());
         assertEquals(1L, comment.getBook().getId());
@@ -56,7 +55,7 @@ class CommentRepositoryImplTest {
         assertEquals(4, comments.size());
         assertNotNull(comments.get(0).getBook());
 
-        var users = comments.stream().map(Comment::getUser).collect(Collectors.toList());
+        var users = comments.stream().map(Comment::getUsername).toList();
         assertTrue(users.containsAll(List.of("user1", "user2", "user3", "user4")));
     }
 
@@ -66,7 +65,7 @@ class CommentRepositoryImplTest {
         assertFalse(comments.isEmpty());
         assertEquals(3, comments.size());
 
-        var users = comments.stream().map(Comment::getUser).collect(Collectors.toList());
+        var users = comments.stream().map(Comment::getUsername).toList();
         assertTrue(users.containsAll(List.of("user1", "user2", "user3")));
     }
 
@@ -79,7 +78,7 @@ class CommentRepositoryImplTest {
         repository.delete(1L);
         comments = repository.findAll();
         assertEquals(3, comments.size());
-        var authorIds = comments.stream().map(Comment::getId).collect(Collectors.toList());
+        var authorIds = comments.stream().map(Comment::getId).toList();
         assertFalse(authorIds.contains(1L));
     }
 }
